@@ -67,9 +67,14 @@
         <artifactId>maven-compiler-plugin</artifactId>
         <version>3.1</version>
         <configuration>
-          <source>17</source>
-          <target>17</target>
+          <source>19</source>
+          <target>19</target>
           <encoding>UTF-8</encoding>
+          <compilerArgs>
+            <arg>--add-modules</arg>
+            <arg>jdk.incubator.vector</arg>
+            <arg>--enable-preview</arg>
+          </compilerArgs>
         </configuration>
       </plugin>
 
@@ -79,7 +84,77 @@
         <version>2.22.2</version>
         <configuration>
           <runOrder>random</runOrder>
+          <argLine>--add-modules jdk.incubator.vector --enable-preview</argLine>
         </configuration>
+      </plugin>
+
+      <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>exec-maven-plugin</artifactId>
+        <version>3.1.0</version>
+        <executions>
+          <execution>
+            <id>run-benchmarks</id>
+            <goals><goal>exec</goal></goals>
+            <configuration>
+              <executable>java</executable>
+              <arguments>
+                <argument>-XX:CompileThresholdScaling=0.05</argument>
+                <argument>-XX:-UseSuperWord</argument>
+                <argument>--add-modules</argument>
+                <argument>jdk.incubator.vector</argument>
+                <argument>--enable-preview</argument>
+                <argument>-classpath</argument>
+                <classpath/>
+                <argument>org.openjdk.jmh.Main</argument>
+                <argument>${jmhArgs}</argument>
+              </arguments>
+              <classpathScope>test</classpathScope>
+            </configuration>
+          </execution>
+          <execution>
+            <id>run-benchmarks-jitwatch</id>
+            <goals><goal>exec</goal></goals>
+            <configuration>
+              <executable>java</executable>
+              <arguments>
+                <argument>--add-modules</argument>
+                <argument>jdk.incubator.vector</argument>
+                <argument>--enable-preview</argument>
+                <argument>-XX:+UnlockDiagnosticVMOptions</argument>
+                <argument>-Xlog:class+load=info</argument>
+                <argument>-XX:LogFile=jvm_logs/%p.log</argument>
+                <argument>-XX:-TieredCompilation</argument>
+                <argument>-XX:+LogCompilation</argument>
+                <argument>-XX:+PrintAssembly</argument>
+                <argument>-XX:+DebugNonSafepoints</argument>
+                <argument>-classpath</argument>
+                <classpath/>
+                <argument>org.openjdk.jmh.Main</argument>
+                <argument>${jmhArgs}</argument>
+              </arguments>
+              <classpathScope>test</classpathScope>
+            </configuration>
+          </execution>
+          <execution>
+            <id>run-benchmarks-jfr</id>
+            <goals><goal>exec</goal></goals>
+            <configuration>
+              <executable>java</executable>
+              <arguments>
+                <argument>--add-modules</argument>
+                <argument>jdk.incubator.vector</argument>
+                <argument>--enable-preview</argument>
+                <argument>-XX:StartFlightRecording=filename=jfr_logs,settings=profile</argument>
+                <argument>-classpath</argument>
+                <classpath/>
+                <argument>org.openjdk.jmh.Main</argument>
+                <argument>${jmhArgs}</argument>
+              </arguments>
+              <classpathScope>test</classpathScope>
+            </configuration>
+          </execution>
+        </executions>
       </plugin>
     </plugins>
 
